# cob_perception_data

./: README.md  stack.xml
cob_perception_data/: CMakeLists.txt  package.xml
cob_read_text_data/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
cob_read_text_data/dictionary/: haushaltsgegenstaende-dictionary
cob_read_text_data/dictionary/.svn/: all-wcprops  entries
cob_read_text_data/fonts/.svn/: all-wcprops  entries
cob_read_text_data/ros/scripts/: space
cob_tesseract_data/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_tesseract_data/tessdata/configs/: letters
